@@ -20,10 +20,14 @@
 #include <rtems/posix/pthread.h>
 
 void _POSIX_Thread_Evaluate_cancellation_and_enable_dispatch(
-  POSIX_API_Control *thread_support
+  Thread_Control    *the_thread
 )
 {
-  bool  cancel = false;
+  POSIX_API_Control *thread_support;
+  bool               cancel;
+
+  cancel         = false;
+  thread_support = the_thread->API_Extensions[ THREAD_API_POSIX ];
 
   if ( thread_support->cancelability_state == PTHREAD_CANCEL_ENABLE &&
        thread_support->cancelability_type == PTHREAD_CANCEL_ASYNCHRONOUS &&
@@ -33,5 +37,5 @@ void _POSIX_Thread_Evaluate_cancellation_and_enable_dispatch(
   _Thread_Enable_dispatch();
   
   if ( cancel )
-    _POSIX_Thread_Exit( _Thread_Executing, PTHREAD_CANCELED );
+    _POSIX_Thread_Exit( the_thread, PTHREAD_CANCELED );
 }
