@@ -1,3 +1,10 @@
+2009-07-21	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* posix/include/rtems/posix/cancel.h, posix/src/cancel.c,
+	posix/src/canceleval.c, posix/src/setcancelstate.c,
+	posix/src/setcanceltype.c: Fix a minor bug in the previous
+	modification which resulted in psxcancel failing.
+
 2009-07-21	Santosh G Vattam <vattam.santosh@gmail.com>
 
 	* posix/Makefile.am, posix/include/rtems/posix/cancel.h,
